tests/paczka2/big_fuzzy/41165345.err
Error in line 3: jwEwBZNt S249 93,7
Error in line 5: jwEwBZNt S63 62,6
Error in line 4: UUlzzV S606 55,4
Error in line 7: tjv S649 58,5
Error in line 16: tjv S606 41,0
Error in line 18: OBwPjove S63 60,6
Error in line 13: UUlzzV S649 0,7
Error in line 23: jwEwBZNt S249 99,0
Error in line 29: jwEwBZNt S649 37,0
Error in line 22: S649 S63 89,7
Error in line 32: S649 S606 65,4
Error in line 30: jwEwBZNt S249 22,0
Error in line 37: szoH25oeK S649 96,1
Error in line 6: cApq S249 199,4
Error in line 40: szoH25oeK S63 50,7
Error in line 46: tjv S606 36,3
Error in line 58: tjv S249 17,11
Error in line 52: tjv S649 18,0
Error in line 69: cApq S606 28,2
Error in line 83: S649 S649 80,5
Error in line 81: jwEwBZNt S63 76,7
Error in line 92: cApq S249 31,6
Error in line 93: cApq S63 29,6
Error in line 94: cApq S649 3,0
Error in line 71: tjv S249 2,4
Error in line 90: szoH25oeK S63 9,7
Error in line 110: UUlzzV S649 21,4
Error in line 114: jwEwBZNt S63 84,3
Error in line 113: cApq S649 76,8
Error in line 126: OBwPjove S649 76,5
Error in line 134: cApq S63 24,9
Error in line 149: tjv S649 37,7
Error in line 157: tjv S63 14,6
Error in line 158: tjv S649 30,3
Error in line 160: tjv S606 67,5
Error in line 154: OBwPjove S649 5,2
Error in line 164: jwEwBZNt S249 31,9
Error in line 168: jwEwBZNt S606 52,9
Error in line 166: cApq S63 56,2
Error in line 182: S649 S606 80,3
Error in line 170: jwEwBZNt S249 52,3
Error in line 194: S649 S606 4,6
Error in line 185: cApq S649 64,2
Error in line 198: cApq S63 78,0
Error in line 196: S649 S649 61,3
Error in line 202: cApq S649 47,7
Error in line 206: jwEwBZNt S606 33,3
Error in line 201: UUlzzV S606 89,2
Error in line 216: cApq S606 82,4
Error in line 222: S649 S249 0,0
Error in line 234: cApq S649 -2,7
Error in line 220: cApq S649 32,4
